# testFastAPI

./: .gitignore  pyproject.toml  readme.md
scripts/: fast-api-entrypoint.sh
src/: errors.py  main.py
src/data/: creature.py  explorer.py  init.py
src/fake/: creature.py  explorer.py
src/service/: creature.py  explorer.py
src/web/: creature.py  explorer.py
test/unit/service/: test_creature.py
